--- a/PartBench/BuildsPage.xaml
+++ b/PartBench/BuildsPage.xaml
@@ -46,6 +46,7 @@
          
         <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
         <Grid Grid.Row="1" x:Name="ContentContainer"  Margin="330,50,20,20">
+
             <!--Column Descriptions-->
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -59,43 +60,219 @@
                 <TextBlock HorizontalAlignment="Right" Grid.Column="2" Text="Edit/Veiw Build"/>
                 <TextBlock HorizontalAlignment="Right" Grid.Column="3" Text="Delete Build"/>
             </Grid>
+            
+            <!--All content inside is scrollable-->
+            <ScrollViewer Margin="0,30,-20,0">
+                <!--List Of builds-->
+                <StackPanel Grid.Row="1" Margin="0,0,20,0">
+                    
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    
+                    
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button x:Name="btnEditBuild" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build" Tapped="btnEditBuild_Tapped"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    
+                    
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
 
-            <!--List Of builds-->
-            <StackPanel Grid.Row="1" Margin="0,30,0,0">
-                <!--Break Line-->
-                <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                <!--Build Row Content-->
-                <Grid Margin="0,0,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
-                    <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
-                    <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                    <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                </Grid>
-                <!--Break Line-->
-                <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
-                <!--Build Row Content-->
-                <Grid Margin="0,0,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="1*"/>
-                        <ColumnDefinition Width="1*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
-                    <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
-                    <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
-                    <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
-                </Grid>
-                <!--Add Build Button-->
-                <AppBarButton HorizontalAlignment="Stretch" Icon="Add" Height="40"/>
-            </StackPanel>
+
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 1"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$1500"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Test Build 2"/>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="$2200"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Background="#ffd500" Foreground="Black" Content="Edit/Veiw Build"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Background="Red" Foreground="Black" Content="Delete Build"/>
+                    </Grid>
+
+                    <!--Add Build Button-->
+                    <AppBarButton HorizontalAlignment="Stretch" Icon="Add" Height="40" Margin="0,0,0,20"/>
+
+                </StackPanel>
+            </ScrollViewer>
+
+            <!--Grid adds fade out to the content at the botton of content area-->
+            <Grid VerticalAlignment="Bottom" Height="15">
+                <Grid.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#7F3D3D3D" Offset="0.4"/>
+                        <GradientStop Color="#FF3D3D3D" Offset="0.933"/>
+                        <GradientStop Color="#003D3D3D" Offset="0"/>
+                        <GradientStop Color="#B73D3D3D" Offset="0.527"/>
+                        <GradientStop Color="#E13D3D3D" Offset="0.713"/>
+                        <GradientStop Color="#F93D3D3D" Offset="0.83"/>
+                    </LinearGradientBrush>
+                </Grid.Background>
+            </Grid>
+
         </Grid>
-        
     </Grid>
 </Page>
