--- a/PartBench/BuildEditorPage.xaml
+++ b/PartBench/BuildEditorPage.xaml
@@ -22,11 +22,12 @@
         </Grid.RowDefinitions>
 
         <!--Nav Bar | Left-->
-        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Test Build 1" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="280" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
+        <muxc:NavigationView CompactModeThresholdWidth="0" Header="Main Page Header" Background="#3d3d3d" x:Name="NavView" Grid.RowSpan="2" IsTitleBarAutoPaddingEnabled="False" IsBackEnabled="True" BackRequested="NavView_BackRequested" OpenPaneLength="280" PaneClosing="NavView_PaneClosing" PaneOpening="NavView_PaneOpening">
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItemHeader Content="Main Pages"/>
                 <muxc:NavigationViewItem x:Name="NavItemHome" Tag="Home" Icon="Home" Content="Home" Tapped="NavItemHome_Tapped"/>
-                <muxc:NavigationViewItem x:Name="NavItemBuilds" Tag="Home" Icon="Repair" Content="Sytem Builds" Tapped="NavItemBuilds_Tapped"/>
+                <muxc:NavigationViewItem x:Name="NavItemBuilds" Tag="Home" Icon="Repair" Content="System Builds" Tapped="NavItemBuilds_Tapped"/>
+                <muxc:NavigationViewItem x:Name="NavItemBuildGuide" Tag="Home" Icon="Keyboard" Content="System Build Guides" Tapped="NavItemBuildGuidePage_Tapped"/>
                 <muxc:NavigationViewItemSeparator/>
                 <muxc:NavigationViewItemHeader Content="Test Pages"/>
                 <muxc:NavigationViewItem x:Name="NavItemTestPage" Tag="TestPage" Icon="AllApps" Content="TestPage" Tapped="NavItemTestPage_Tapped"/>
@@ -41,7 +42,7 @@
                 <ColumnDefinition x:Name="RightPaddingColumn" Width="0"/>
             </Grid.ColumnDefinitions>
             <!--Logo-->
-            <Image Grid.Column="1" Source="Assets/PartBenchLogoV1.png" Height="25" Margin="0,8" HorizontalAlignment="Left"/>
+            <Image Grid.Column="1" Source="/Assets/PBLogo.png" Height="25" Margin="0,8" HorizontalAlignment="Left"/>
         </Grid>
 
         <!--Content Area - Margin.Left Expaned View 330 Colapsed View 90-->
@@ -188,6 +189,90 @@
                             <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Storage"/>
+                        <DropDownButton Content="Select" VerticalAlignment="Bottom" Grid.Column="1" Margin="0,0,0,3">
+                            <DropDownButton.Flyout>
+                                <Flyout>
+                                    <ListView>
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                    </ListView>
+                                </Flyout>
+                            </DropDownButton.Flyout>
+                        </DropDownButton>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="2" Text="-"/>
+                        <AppBarButton VerticalAlignment="Center" Grid.Column="3" Icon="Delete" Height="36" Width="48" HorizontalAlignment="Right" Margin="0,0,0,0"/>
+                    </Grid>
+
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Video Card"/>
+                        <DropDownButton Content="Select" VerticalAlignment="Bottom" Grid.Column="1" Margin="0,0,0,3">
+                            <DropDownButton.Flyout>
+                                <Flyout>
+                                    <ListView>
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                    </ListView>
+                                </Flyout>
+                            </DropDownButton.Flyout>
+                        </DropDownButton>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="2" Text="-"/>
+                        <AppBarButton VerticalAlignment="Center" Grid.Column="3" Icon="Delete" Height="36" Width="48" HorizontalAlignment="Right" Margin="0,0,0,0"/>
+                    </Grid>
+
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Case"/>
+                        <DropDownButton Content="Select" VerticalAlignment="Bottom" Grid.Column="1" Margin="0,0,0,3">
+                            <DropDownButton.Flyout>
+                                <Flyout>
+                                    <ListView>
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                        <TextBlock Text="TEst" />
+                                    </ListView>
+                                </Flyout>
+                            </DropDownButton.Flyout>
+                        </DropDownButton>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="2" Text="-"/>
+                        <AppBarButton VerticalAlignment="Center" Grid.Column="3" Icon="Delete" Height="36" Width="48" HorizontalAlignment="Right" Margin="0,0,0,0"/>
+                    </Grid>
+
+                    <!--Break Line-->
+                    <Line Margin="0,8,0,8" X1="99999" Y1="0" StrokeThickness="2" Stroke="White"/>
+
+                    <!--Build Row Content-->
+                    <Grid Margin="0,0,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" Text="Power Supply"/>
                         <DropDownButton Content="Select" VerticalAlignment="Bottom" Grid.Column="1" Margin="0,0,0,3">
                             <DropDownButton.Flyout>
                                 <Flyout>
